test/src/e2e_vm_tests/test_programs/should_pass/language/attributes/attribute_require/src/another_file.sw
library;

pub struct InnerStruct {
    pub a: u64,
}
