test/src/e2e_vm_tests/test_programs/should_fail/double_underscore_struct/src/main.sw
script;

struct __MyStruct {
    a: u64,
}
fn main() {
}
